Fix header action items alignment

--- a/packages/amplication-client/src/Entities/Entities.css
+++ b/packages/amplication-client/src/Entities/Entities.css
@@ -10,7 +10,7 @@
   align-items: center;
 }
 
-.entities > .actions {
+.entities > header .actions {
   margin-left: auto;
 }
 
